@@ -1,0 +1,9 @@
+<?php
+require_once MODX_MANAGER_PATH . 'controllers/default/resource/data.class.php';
+/**
+ * Loads the resource data page
+ *
+ * @package modx
+ * @subpackage manager.controllers
+ */
+class GridContainerDataManagerController extends ResourceDataManagerController {}
